fix https://github.com/umjammer/vavi-apps-jwindiff/security/code-scanning/1